# FastAPI_for_practice

./: .gitignore  README.md  index.html  main.py  main_DB.py  pyproject.toml  requirements.txt  setting.py
app/: index.html  main_DB.py  setting.py  test_script.js
app/sql_app/: database.py  schemas.py  sql_app.db
service/: main.py  setting.py
service/models/: __init__.py
service/resource/: __init__.py
service/routers/: __init__.py  cookie_header_route.py  file_route.py  main_route.py
service/schemas/: main_schemas.py
sql_app/: database.py  schemas.py  sql_app.db
test/: test_code.py
