[tool.poetry]
name = "practice fastapi"
version = "0.1.0"
description = ""
authors = ["Lianyun Li"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.90.1"}
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
